Complete functionality
#4
